--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
-  <link rel="shortcut icon" href="./images/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="./images/logo2.png" type="image/png" />
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -76,7 +76,7 @@
               </div>
             </div>
           </li>
-          <li><a href="">Blog</a></li>
+          <li><a href="">Login</a></li>
           <li>
             <a href="" class="desktop-item"
               >Vendors <span><i class="fas fa-chevron-down"></i></span
